Lab4/make.out
src/main.cc: In function ‘Point2D getPoint(std::__cxx11::string&)’:
src/main.cc:24:36: error: variable ‘std::stringstream vstream’ has initializer but incomplete type
     std::stringstream vstream(token);
                                    ^
src/main.cc:27:32: error: invalid use of incomplete type ‘std::stringstream {aka class std::__cxx11::basic_stringstream<char>}’
         std::stringstream(value) >> x;
                                ^
In file included from /usr/include/c++/5/ios:38:0,
                 from /usr/include/c++/5/ostream:38,
                 from /usr/include/c++/5/iostream:39,
                 from src/main.cc:14:
/usr/include/c++/5/iosfwd:108:11: note: declaration of ‘std::stringstream {aka class std::__cxx11::basic_stringstream<char>}’
     class basic_stringstream;
           ^
src/main.cc:29:36: error: invalid use of incomplete type ‘std::stringstream {aka class std::__cxx11::basic_stringstream<char>}’
             std::stringstream(value) >> y;
                                    ^
In file included from /usr/include/c++/5/ios:38:0,
                 from /usr/include/c++/5/ostream:38,
                 from /usr/include/c++/5/iostream:39,
                 from src/main.cc:14:
/usr/include/c++/5/iosfwd:108:11: note: declaration of ‘std::stringstream {aka class std::__cxx11::basic_stringstream<char>}’
     class basic_stringstream;
           ^
src/main.cc:30:27: error: expected primary-expression before ‘)’ token
             return Point2D)(x, y);
                           ^
src/main.cc:30:27: error: expected ‘;’ before ‘)’ token
src/main.cc:30:27: error: expected primary-expression before ‘)’ token
src/main.cc: In function ‘void parse(std::__cxx11::string)’:
src/main.cc:41:27: error: declaration of ‘std::stringstream line’ shadows a parameter
     std::stringstream(line);
                           ^
src/main.cc:41:27: error: aggregate ‘std::stringstream line’ has incomplete type and cannot be defined
src/main.cc:48:12: error: ‘stream’ was not declared in this scope
     while (stream >> token) {
            ^
src/main.cc: In function ‘int main(int, char**)’:
src/main.cc:81:26: error: variable ‘std::ifstream input’ has initializer but incomplete type
     std::ifstream input (argv[1]);
                          ^
src/main.cc:82:53: error: expected ‘;’ before ‘)’ token
     for (std::string line; std::getline(input, line)) {
                                                     ^
